src/generated/Parser.output
State 26 conflicts: 1 shift/reduce
State 42 conflicts: 1 shift/reduce
State 47 conflicts: 1 shift/reduce
State 83 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 143 conflicts: 1 shift/reduce
State 144 conflicts: 1 shift/reduce
State 145 conflicts: 1 shift/reduce, 2 reduce/reduce
State 153 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce
State 155 conflicts: 1 shift/reduce
State 156 conflicts: 1 shift/reduce
State 157 conflicts: 1 shift/reduce
State 158 conflicts: 1 shift/reduce
State 208 conflicts: 6 shift/reduce
State 214 conflicts: 1 shift/reduce, 2 reduce/reduce
State 219 conflicts: 1 shift/reduce
State 222 conflicts: 1 shift/reduce
State 223 conflicts: 1 shift/reduce
State 226 conflicts: 1 shift/reduce
State 227 conflicts: 1 shift/reduce
State 228 conflicts: 1 shift/reduce
State 229 conflicts: 1 shift/reduce
State 230 conflicts: 1 shift/reduce
State 231 conflicts: 1 shift/reduce
State 232 conflicts: 1 shift/reduce
State 233 conflicts: 1 shift/reduce
State 234 conflicts: 1 shift/reduce
State 235 conflicts: 1 shift/reduce
State 236 conflicts: 1 shift/reduce
State 237 conflicts: 1 shift/reduce
State 238 conflicts: 1 shift/reduce
State 239 conflicts: 1 shift/reduce
State 240 conflicts: 1 shift/reduce
State 241 conflicts: 1 shift/reduce
State 242 conflicts: 1 shift/reduce
State 243 conflicts: 1 shift/reduce
State 244 conflicts: 1 shift/reduce
State 245 conflicts: 1 shift/reduce
State 246 conflicts: 1 shift/reduce
State 247 conflicts: 1 shift/reduce
State 248 conflicts: 1 shift/reduce
State 249 conflicts: 1 shift/reduce
State 250 conflicts: 1 shift/reduce
State 251 conflicts: 1 shift/reduce
State 252 conflicts: 1 shift/reduce
State 271 conflicts: 1 shift/reduce, 3 reduce/reduce
State 287 conflicts: 1 shift/reduce
State 288 conflicts: 1 shift/reduce
State 314 conflicts: 1 shift/reduce
State 334 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Decls

    2 Decls: Decls Decl
    3      | ε

    4 Decl: FuncDecl
    5     | VarDecl
    6     | TypeDecl
    7     | TypedefDecl

    8 TypedefDecl: TYPEDEF VarType IDENTIFIER SEMICOLON
    9            | TYPEDEF VarType LPARENTHESES ASTERISK IDENTIFIER RPARENTHESES LPARENTHESES ParamList RPARENTHESES SEMICOLON
   10            | TYPEDEF STRUCT IDENTIFIER LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON
   11            | TYPEDEF UNION IDENTIFIER LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON

   12 FuncDecl: STATIC VarType IDENTIFIER LPARENTHESES ParamList RPARENTHESES SEMICOLON
   13         | STATIC VarType IDENTIFIER LPARENTHESES ParamList RPARENTHESES FuncBody
   14         | VarType IDENTIFIER LPARENTHESES ParamList RPARENTHESES SEMICOLON
   15         | VarType IDENTIFIER LPARENTHESES ParamList RPARENTHESES FuncBody

   16 FuncBody: LBRACE Stmts RBRACE

   17 VarDecl: STATIC VarType VarList SEMICOLON
   18        | VarType VarList SEMICOLON
   19        | VarType LPARENTHESES ASTERISK IDENTIFIER RPARENTHESES LPARENTHESES ParamList RPARENTHESES SEMICOLON

   20 TypeDecl: _VarType SEMICOLON

   21 VarType: _VarType
   22        | CONST _VarType

   23 _VarType: BuiltinType
   24         | STRUCT IDENTIFIER LBRACE FieldDecls RBRACE
   25         | STRUCT IDENTIFIER
   26         | UNION IDENTIFIER LBRACE FieldDecls RBRACE
   27         | UNION IDENTIFIER
   28         | ENUM IDENTIFIER LBRACE EnumList RBRACE
   29         | ENUM IDENTIFIER
   30         | _VarType ASTERISK
   31         | IDENTIFIER

   32 VarList: VarList COMMA VarInit
   33        | VarInit
   34        | ε

   35 VarInit: IDENTIFIER ArrayBoundList
   36        | IDENTIFIER ArrayBoundList ASSIGN Expr
   37        | IDENTIFIER ArrayBoundList ASSIGN LBRACE InitList RBRACE
   38        | IDENTIFIER ArrayBoundList ASSIGN LBRACE RBRACE

   39 InitList: InitList COMMA InitItem
   40         | InitItem

   41 InitItem: Expr
   42         | LBRACE InitList RBRACE

   43 ArrayBoundList: ArrayBoundList ArrayBound
   44               | ArrayBound
   45               | ε

   46 ArrayBound: LBRACKET INTEGER RBRACKET
   47           | LBRACKET RBRACKET

   48 ParamList: ParamList COMMA Param
   49          | ParamList COMMA ELLIPSES
   50          | Param
   51          | ELLIPSES
   52          | ε

   53 Param: VarType IDENTIFIER
   54      | VarType
   55      | VarType LPARENTHESES ASTERISK IDENTIFIER RPARENTHESES LPARENTHESES ParamList RPARENTHESES

   56 BuiltinType: CHAR
   57            | SHORT
   58            | INT
   59            | LONG
   60            | UNSIGNED
   61            | UNSIGNED CHAR
   62            | UNSIGNED SHORT
   63            | UNSIGNED INT
   64            | UNSIGNED LONG
   65            | FLOAT
   66            | DOUBLE
   67            | BOOL
   68            | VOID

   69 FieldDecls: FieldDecls FieldDecl
   70           | ε

   71 FieldDecl: VarType MemberList SEMICOLON
   72          | SEMICOLON

   73 MemberList: MemberList COMMA IDENTIFIER
   74           | IDENTIFIER
   75           | ε

   76 EnumList: EnumList COMMA Enum
   77         | Enum
   78         | ε

   79 Enum: IDENTIFIER
   80     | IDENTIFIER ASSIGN INTEGER
   81     | IDENTIFIER ASSIGN SUB INTEGER

   82 Stmts: Stmts Stmt
   83      | ε

   84 Stmt: Expr SEMICOLON
   85     | IfStmt
   86     | SwitchStmt
   87     | ForStmt
   88     | DoStmt
   89     | WhileStmt
   90     | ContinueStmt
   91     | BreakStmt
   92     | ReturnStmt
   93     | Block
   94     | TypeDecl
   95     | TypedefDecl
   96     | VarDecl
   97     | SEMICOLON

   98 IfStmt: IF LPARENTHESES Expr RPARENTHESES Stmt ELSE Stmt
   99       | IF LPARENTHESES Expr RPARENTHESES Stmt

  100 SwitchStmt: SWITCH LPARENTHESES Expr RPARENTHESES LBRACE CaseStmtList RBRACE

  101 CaseStmtList: CaseStmtList CaseStmt
  102             | ε

  103 CaseStmt: CASE Expr COLON Stmts
  104         | DEFAULT COLON Stmts

  105 ForStmt: FOR LPARENTHESES Expr SEMICOLON Expr SEMICOLON Expr RPARENTHESES Stmt
  106        | FOR LPARENTHESES SEMICOLON Expr SEMICOLON Expr RPARENTHESES Stmt
  107        | FOR LPARENTHESES VarDecl Expr SEMICOLON Expr RPARENTHESES Stmt

  108 DoStmt: DO Stmt WHILE LPARENTHESES Expr RPARENTHESES SEMICOLON

  109 WhileStmt: WHILE LPARENTHESES Expr RPARENTHESES Stmt

  110 ContinueStmt: CONTINUE SEMICOLON

  111 BreakStmt: BREAK SEMICOLON

  112 ReturnStmt: RETURN SEMICOLON
  113           | RETURN Expr SEMICOLON

  114 Block: LBRACE Stmts RBRACE

  115 Expr: IDENTIFIER
  116     | Constant
  117     | LPARENTHESES Expr RPARENTHESES
  118     | Expr COMMA Expr
  119     | IDENTIFIER LPARENTHESES ExprList RPARENTHESES
  120     | Expr DOT IDENTIFIER
  121     | Expr ARROW IDENTIFIER
  122     | Expr LBRACKET Expr RBRACKET
  123     | LPARENTHESES VarType RPARENTHESES Expr
  124     | LPARENTHESES IDENTIFIER RPARENTHESES
  125     | LPARENTHESES IDENTIFIER RPARENTHESES Expr
  126     | SIZEOF LPARENTHESES VarType RPARENTHESES
  127     | SIZEOF LPARENTHESES Expr RPARENTHESES
  128     | SIZEOF LPARENTHESES IDENTIFIER RPARENTHESES
  129     | ADD Expr
  130     | SUB Expr
  131     | ASTERISK Expr
  132     | AMPERSAND Expr
  133     | Expr ASSIGN Expr
  134     | Expr ADD Expr
  135     | Expr SUB Expr
  136     | Expr ASTERISK Expr
  137     | Expr DIV Expr
  138     | Expr MOD Expr
  139     | Expr DADD
  140     | Expr DSUB
  141     | DADD Expr
  142     | DSUB Expr
  143     | Expr ADDEQ Expr
  144     | Expr SUBEQ Expr
  145     | Expr MULEQ Expr
  146     | Expr DIVEQ Expr
  147     | Expr MODEQ Expr
  148     | Expr AMPERSAND Expr
  149     | Expr BOR Expr
  150     | Expr BXOR Expr
  151     | BNOT Expr
  152     | Expr BANDEQ Expr
  153     | Expr BOREQ Expr
  154     | Expr BXOREQ Expr
  155     | Expr SHL Expr
  156     | Expr SHR Expr
  157     | Expr SHLEQ Expr
  158     | Expr SHREQ Expr
  159     | Expr AND Expr
  160     | Expr OR Expr
  161     | NOT Expr
  162     | Expr EQ Expr
  163     | Expr NEQ Expr
  164     | Expr LT Expr
  165     | Expr LE Expr
  166     | Expr GT Expr
  167     | Expr GE Expr
  168     | Expr QUESTION Expr COLON Expr

  169 ExprList: ExprList COMMA Expr
  170         | Expr
  171         | ε

  172 Constant: CHARACTER
  173         | INTEGER
  174         | UINTEGER
  175         | LONGVAL
  176         | ULONGVAL
  177         | FLOATVAL
  178         | DOUBLEVAL
  179         | STRING
  180         | TRUE
  181         | FALSE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    COMMA (258) 32 39 48 49 73 76 118 169
    COLON (259) 103 104 168
    SEMICOLON (260) 8 9 10 11 12 14 17 18 19 20 71 72 84 97 105 106 107 108 110 111 112 113
    QUESTION (261) 168
    ELLIPSES (262) 49 51
    DOT (263) 120
    ASTERISK (264) 9 19 30 55 131 136
    AMPERSAND (265) 132 148
    ARROW (266) 121
    LPARENTHESES (267) 9 12 13 14 15 19 55 98 99 100 105 106 107 108 109 117 119 123 124 125 126 127 128
    RPARENTHESES (268) 9 12 13 14 15 19 55 98 99 100 105 106 107 108 109 117 119 123 124 125 126 127 128
    LBRACKET (269) 46 47 122
    RBRACKET (270) 46 47 122
    LBRACE (271) 10 11 16 24 26 28 37 38 42 100 114
    RBRACE (272) 10 11 16 24 26 28 37 38 42 100 114
    ASSIGN (273) 36 37 38 80 81 133
    ADD (274) 129 134
    SUB (275) 81 130 135
    DIV (276) 137
    MOD (277) 138
    DADD (278) 139 141
    DSUB (279) 140 142
    ADDEQ (280) 143
    SUBEQ (281) 144
    MULEQ (282) 145
    DIVEQ (283) 146
    MODEQ (284) 147
    BOR (285) 149
    BXOR (286) 150
    BNOT (287) 151
    BANDEQ (288) 152
    BOREQ (289) 153
    BXOREQ (290) 154
    SHL (291) 155
    SHR (292) 156
    SHLEQ (293) 157
    SHREQ (294) 158
    AND (295) 159
    OR (296) 160
    NOT (297) 161
    EQ (298) 162
    NEQ (299) 163
    GT (300) 166
    GE (301) 167
    LT (302) 164
    LE (303) 165
    CHAR (304) 56 61
    SHORT (305) 57 62
    INT (306) 58 63
    LONG (307) 59 64
    UNSIGNED (308) 60 61 62 63 64
    CONST (309) 22
    STATIC (310) 12 13 17
    VOID (311) 68
    FLOAT (312) 65
    DOUBLE (313) 66
    BOOL (314) 67
    TRUE (315) 180
    FALSE (316) 181
    IF (317) 98 99
    ELSE (318) 98
    SWITCH (319) 100
    CASE (320) 103
    DEFAULT (321) 104
    FOR (322) 105 106 107
    DO (323) 108
    WHILE (324) 108 109
    CONTINUE (325) 110
    BREAK (326) 111
    RETURN (327) 112 113
    STRUCT (328) 10 24 25
    UNION (329) 11 26 27
    ENUM (330) 28 29
    TYPEDEF (331) 8 9 10 11
    SIZEOF (332) 126 127 128
    IDENTIFIER <idVal> (333) 8 9 10 11 12 13 14 15 19 24 25 26 27 28 29 31 35 36 37 38 53 55 73 74 79 80 81 115 119 120 121 124 125 128
    CHARACTER <charVal> (334) 172
    INTEGER <intVal> (335) 46 80 81 173
    UINTEGER <uintVal> (336) 174
    LONGVAL <longVal> (337) 175
    ULONGVAL <ulongVal> (338) 176
    FLOATVAL <floatVal> (339) 177
    DOUBLEVAL <doubleVal> (340) 178
    STRING <strVal> (341) 179


Nonterminals, with rules where they appear

    $accept (87)
        on left: 0
    Program <program> (88)
        on left: 1
        on right: 0
    Decls <decls> (89)
        on left: 2 3
        on right: 1 2
    Decl <decl> (90)
        on left: 4 5 6 7
        on right: 2
    TypedefDecl <typedefDecl> (91)
        on left: 8 9 10 11
        on right: 7 95
    FuncDecl <funcDecl> (92)
        on left: 12 13 14 15
        on right: 4
    FuncBody <funcBody> (93)
        on left: 16
        on right: 13 15
    VarDecl <varDecl> (94)
        on left: 17 18 19
        on right: 5 96 107
    TypeDecl <typeDecl> (95)
        on left: 20
        on right: 6 94
    VarType <varType> (96)
        on left: 21 22
        on right: 8 9 12 13 14 15 17 18 19 53 54 55 71 123 126
    _VarType <varType> (97)
        on left: 23 24 25 26 27 28 29 30 31
        on right: 20 21 22 30
    VarList <varList> (98)
        on left: 32 33 34
        on right: 17 18 32
    VarInit <varInit> (99)
        on left: 35 36 37 38
        on right: 32 33
    InitList <initList> (100)
        on left: 39 40
        on right: 37 39 42
    InitItem <initElement> (101)
        on left: 41 42
        on right: 39 40
    ArrayBoundList <arrayBoundList> (102)
        on left: 43 44 45
        on right: 35 36 37 38 43
    ArrayBound <sizeVal> (103)
        on left: 46 47
        on right: 43 44
    ParamList <paramList> (104)
        on left: 48 49 50 51 52
        on right: 9 12 13 14 15 19 48 49 55
    Param <param> (105)
        on left: 53 54 55
        on right: 48 50
    BuiltinType <builtinType> (106)
        on left: 56 57 58 59 60 61 62 63 64 65 66 67 68
        on right: 23
    FieldDecls <fieldDecls> (107)
        on left: 69 70
        on right: 10 11 24 26 69
    FieldDecl <fieldDecl> (108)
        on left: 71 72
        on right: 69
    MemberList <memberList> (109)
        on left: 73 74 75
        on right: 71 73
    EnumList <enumList> (110)
        on left: 76 77 78
        on right: 28 76
    Enum <enumeration> (111)
        on left: 79 80 81
        on right: 76 77
    Stmts <stmts> (112)
        on left: 82 83
        on right: 16 82 103 104 114
    Stmt <stmt> (113)
        on left: 84 85 86 87 88 89 90 91 92 93 94 95 96 97
        on right: 82 98 99 105 106 107 108 109
    IfStmt <ifStmt> (114)
        on left: 98 99
        on right: 85
    SwitchStmt <switchStmt> (115)
        on left: 100
        on right: 86
    CaseStmtList <caseStmtList> (116)
        on left: 101 102
        on right: 100 101
    CaseStmt <caseStmt> (117)
        on left: 103 104
        on right: 101
    ForStmt <forStmt> (118)
        on left: 105 106 107
        on right: 87
    DoStmt <doStmt> (119)
        on left: 108
        on right: 88
    WhileStmt <whileStmt> (120)
        on left: 109
        on right: 89
    ContinueStmt <continueStmt> (121)
        on left: 110
        on right: 90
    BreakStmt <breakStmt> (122)
        on left: 111
        on right: 91
    ReturnStmt <returnStmt> (123)
        on left: 112 113
        on right: 92
    Block <block> (124)
        on left: 114
        on right: 93
    Expr <expr> (125)
        on left: 115 116 117 118 119 120 121 122 123 124 125 126 127 128 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168
        on right: 36 41 84 98 99 100 103 105 106 107 108 109 113 117 118 120 121 122 123 125 127 129 130 131 132 133 134 135 136 137 138 139 140 141 142 143 144 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170
    ExprList <exprList> (126)
        on left: 169 170 171
        on right: 119 169
    Constant <constant> (127)
        on left: 172 173 174 175 176 177 178 179 180 181
        on right: 116


State 0

    0 $accept: • Program $end

    $default  reduce using rule 3 (Decls)

    Program  go to state 1
    Decls    go to state 2


State 1

    0 $accept: Program • $end

    $end  shift, and go to state 3


State 2

    1 Program: Decls •
    2 Decls: Decls • Decl

    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    CONST       shift, and go to state 9
    STATIC      shift, and go to state 10
    VOID        shift, and go to state 11
    FLOAT       shift, and go to state 12
    DOUBLE      shift, and go to state 13
    BOOL        shift, and go to state 14
    STRUCT      shift, and go to state 15
    UNION       shift, and go to state 16
    ENUM        shift, and go to state 17
    TYPEDEF     shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    $default  reduce using rule 1 (Program)

    Decl         go to state 20
    TypedefDecl  go to state 21
    FuncDecl     go to state 22
    VarDecl      go to state 23
    TypeDecl     go to state 24
    VarType      go to state 25
    _VarType     go to state 26
    BuiltinType  go to state 27


State 3

    0 $accept: Program $end •

    $default  accept


State 4

   56 BuiltinType: CHAR •

    $default  reduce using rule 56 (BuiltinType)


State 5

   57 BuiltinType: SHORT •

    $default  reduce using rule 57 (BuiltinType)


State 6

   58 BuiltinType: INT •

    $default  reduce using rule 58 (BuiltinType)


State 7

   59 BuiltinType: LONG •

    $default  reduce using rule 59 (BuiltinType)


State 8

   60 BuiltinType: UNSIGNED •
   61            | UNSIGNED • CHAR
   62            | UNSIGNED • SHORT
   63            | UNSIGNED • INT
   64            | UNSIGNED • LONG

    CHAR   shift, and go to state 28
    SHORT  shift, and go to state 29
    INT    shift, and go to state 30
    LONG   shift, and go to state 31

    $default  reduce using rule 60 (BuiltinType)


State 9

   22 VarType: CONST • _VarType

    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    VOID        shift, and go to state 11
    FLOAT       shift, and go to state 12
    DOUBLE      shift, and go to state 13
    BOOL        shift, and go to state 14
    STRUCT      shift, and go to state 15
    UNION       shift, and go to state 16
    ENUM        shift, and go to state 17
    IDENTIFIER  shift, and go to state 19

    _VarType     go to state 32
    BuiltinType  go to state 27


State 10

   12 FuncDecl: STATIC • VarType IDENTIFIER LPARENTHESES ParamList RPARENTHESES SEMICOLON
   13         | STATIC • VarType IDENTIFIER LPARENTHESES ParamList RPARENTHESES FuncBody
   17 VarDecl: STATIC • VarType VarList SEMICOLON

    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    CONST       shift, and go to state 9
    VOID        shift, and go to state 11
    FLOAT       shift, and go to state 12
    DOUBLE      shift, and go to state 13
    BOOL        shift, and go to state 14
    STRUCT      shift, and go to state 15
    UNION       shift, and go to state 16
    ENUM        shift, and go to state 17
    IDENTIFIER  shift, and go to state 19

    VarType      go to state 33
    _VarType     go to state 34
    BuiltinType  go to state 27


State 11

   68 BuiltinType: VOID •

    $default  reduce using rule 68 (BuiltinType)


State 12

   65 BuiltinType: FLOAT •

    $default  reduce using rule 65 (BuiltinType)


State 13

   66 BuiltinType: DOUBLE •

    $default  reduce using rule 66 (BuiltinType)


State 14

   67 BuiltinType: BOOL •

    $default  reduce using rule 67 (BuiltinType)


State 15

   24 _VarType: STRUCT • IDENTIFIER LBRACE FieldDecls RBRACE
   25         | STRUCT • IDENTIFIER

    IDENTIFIER  shift, and go to state 35


State 16

   26 _VarType: UNION • IDENTIFIER LBRACE FieldDecls RBRACE
   27         | UNION • IDENTIFIER

    IDENTIFIER  shift, and go to state 36


State 17

   28 _VarType: ENUM • IDENTIFIER LBRACE EnumList RBRACE
   29         | ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 37


State 18

    8 TypedefDecl: TYPEDEF • VarType IDENTIFIER SEMICOLON
    9            | TYPEDEF • VarType LPARENTHESES ASTERISK IDENTIFIER RPARENTHESES LPARENTHESES ParamList RPARENTHESES SEMICOLON
   10            | TYPEDEF • STRUCT IDENTIFIER LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON
   11            | TYPEDEF • UNION IDENTIFIER LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON

    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    CONST       shift, and go to state 9
    VOID        shift, and go to state 11
    FLOAT       shift, and go to state 12
    DOUBLE      shift, and go to state 13
    BOOL        shift, and go to state 14
    STRUCT      shift, and go to state 38
    UNION       shift, and go to state 39
    ENUM        shift, and go to state 17
    IDENTIFIER  shift, and go to state 19

    VarType      go to state 40
    _VarType     go to state 34
    BuiltinType  go to state 27


State 19

   31 _VarType: IDENTIFIER •

    $default  reduce using rule 31 (_VarType)


State 20

    2 Decls: Decls Decl •

    $default  reduce using rule 2 (Decls)


State 21

    7 Decl: TypedefDecl •

    $default  reduce using rule 7 (Decl)


State 22

    4 Decl: FuncDecl •

    $default  reduce using rule 4 (Decl)


State 23

    5 Decl: VarDecl •

    $default  reduce using rule 5 (Decl)


State 24

    6 Decl: TypeDecl •

    $default  reduce using rule 6 (Decl)


State 25

   14 FuncDecl: VarType • IDENTIFIER LPARENTHESES ParamList RPARENTHESES SEMICOLON
   15         | VarType • IDENTIFIER LPARENTHESES ParamList RPARENTHESES FuncBody
   18 VarDecl: VarType • VarList SEMICOLON
   19        | VarType • LPARENTHESES ASTERISK IDENTIFIER RPARENTHESES LPARENTHESES ParamList RPARENTHESES SEMICOLON

    LPARENTHESES  shift, and go to state 41
    IDENTIFIER    shift, and go to state 42

    $default  reduce using rule 34 (VarList)

    VarList  go to state 43
    VarInit  go to state 44


State 26

   20 TypeDecl: _VarType • SEMICOLON
   21 VarType: _VarType •
   30 _VarType: _VarType • ASTERISK

    SEMICOLON  shift, and go to state 45
    ASTERISK   shift, and go to state 46

    SEMICOLON  [reduce using rule 21 (VarType)]
    $default   reduce using rule 21 (VarType)


State 27

   23 _VarType: BuiltinType •

    $default  reduce using rule 23 (_VarType)


State 28

   61 BuiltinType: UNSIGNED CHAR •

    $default  reduce using rule 61 (BuiltinType)


State 29

   62 BuiltinType: UNSIGNED SHORT •

    $default  reduce using rule 62 (BuiltinType)


State 30

   63 BuiltinType: UNSIGNED INT •

    $default  reduce using rule 63 (BuiltinType)


State 31

   64 BuiltinType: UNSIGNED LONG •

    $default  reduce using rule 64 (BuiltinType)


State 32

   22 VarType: CONST _VarType •
   30 _VarType: _VarType • ASTERISK

    ASTERISK  shift, and go to state 46

    $default  reduce using rule 22 (VarType)


State 33

   12 FuncDecl: STATIC VarType • IDENTIFIER LPARENTHESES ParamList RPARENTHESES SEMICOLON
   13         | STATIC VarType • IDENTIFIER LPARENTHESES ParamList RPARENTHESES FuncBody
   17 VarDecl: STATIC VarType • VarList SEMICOLON

    IDENTIFIER  shift, and go to state 47

    $default  reduce using rule 34 (VarList)

    VarList  go to state 48
    VarInit  go to state 44


State 34

   21 VarType: _VarType •
   30 _VarType: _VarType • ASTERISK

    ASTERISK  shift, and go to state 46

    $default  reduce using rule 21 (VarType)


State 35

   24 _VarType: STRUCT IDENTIFIER • LBRACE FieldDecls RBRACE
   25         | STRUCT IDENTIFIER •

    LBRACE  shift, and go to state 49

    $default  reduce using rule 25 (_VarType)


State 36

   26 _VarType: UNION IDENTIFIER • LBRACE FieldDecls RBRACE
   27         | UNION IDENTIFIER •

    LBRACE  shift, and go to state 50

    $default  reduce using rule 27 (_VarType)


State 37

   28 _VarType: ENUM IDENTIFIER • LBRACE EnumList RBRACE
   29         | ENUM IDENTIFIER •

    LBRACE  shift, and go to state 51

    $default  reduce using rule 29 (_VarType)


State 38

   10 TypedefDecl: TYPEDEF STRUCT • IDENTIFIER LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON
   24 _VarType: STRUCT • IDENTIFIER LBRACE FieldDecls RBRACE
   25         | STRUCT • IDENTIFIER

    IDENTIFIER  shift, and go to state 52


State 39

   11 TypedefDecl: TYPEDEF UNION • IDENTIFIER LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON
   26 _VarType: UNION • IDENTIFIER LBRACE FieldDecls RBRACE
   27         | UNION • IDENTIFIER

    IDENTIFIER  shift, and go to state 53


State 40

    8 TypedefDecl: TYPEDEF VarType • IDENTIFIER SEMICOLON
    9            | TYPEDEF VarType • LPARENTHESES ASTERISK IDENTIFIER RPARENTHESES LPARENTHESES ParamList RPARENTHESES SEMICOLON

    LPARENTHESES  shift, and go to state 54
    IDENTIFIER    shift, and go to state 55


State 41

   19 VarDecl: VarType LPARENTHESES • ASTERISK IDENTIFIER RPARENTHESES LPARENTHESES ParamList RPARENTHESES SEMICOLON

    ASTERISK  shift, and go to state 56


State 42

   14 FuncDecl: VarType IDENTIFIER • LPARENTHESES ParamList RPARENTHESES SEMICOLON
   15         | VarType IDENTIFIER • LPARENTHESES ParamList RPARENTHESES FuncBody
   35 VarInit: IDENTIFIER • ArrayBoundList
   36        | IDENTIFIER • ArrayBoundList ASSIGN Expr
   37        | IDENTIFIER • ArrayBoundList ASSIGN LBRACE InitList RBRACE
   38        | IDENTIFIER • ArrayBoundList ASSIGN LBRACE RBRACE

    LPARENTHESES  shift, and go to state 57
    LBRACKET      shift, and go to state 58

    LBRACKET  [reduce using rule 45 (ArrayBoundList)]
    $default  reduce using rule 45 (ArrayBoundList)

    ArrayBoundList  go to state 59
    ArrayBound      go to state 60


State 43

   18 VarDecl: VarType VarList • SEMICOLON
   32 VarList: VarList • COMMA VarInit

    COMMA      shift, and go to state 61
    SEMICOLON  shift, and go to state 62


State 44

   33 VarList: VarInit •

    $default  reduce using rule 33 (VarList)


State 45

   20 TypeDecl: _VarType SEMICOLON •

    $default  reduce using rule 20 (TypeDecl)


State 46

   30 _VarType: _VarType ASTERISK •

    $default  reduce using rule 30 (_VarType)


State 47

   12 FuncDecl: STATIC VarType IDENTIFIER • LPARENTHESES ParamList RPARENTHESES SEMICOLON
   13         | STATIC VarType IDENTIFIER • LPARENTHESES ParamList RPARENTHESES FuncBody
   35 VarInit: IDENTIFIER • ArrayBoundList
   36        | IDENTIFIER • ArrayBoundList ASSIGN Expr
   37        | IDENTIFIER • ArrayBoundList ASSIGN LBRACE InitList RBRACE
   38        | IDENTIFIER • ArrayBoundList ASSIGN LBRACE RBRACE

    LPARENTHESES  shift, and go to state 63
    LBRACKET      shift, and go to state 58

    LBRACKET  [reduce using rule 45 (ArrayBoundList)]
    $default  reduce using rule 45 (ArrayBoundList)

    ArrayBoundList  go to state 59
    ArrayBound      go to state 60


State 48

   17 VarDecl: STATIC VarType VarList • SEMICOLON
   32 VarList: VarList • COMMA VarInit

    COMMA      shift, and go to state 61
    SEMICOLON  shift, and go to state 64


State 49

   24 _VarType: STRUCT IDENTIFIER LBRACE • FieldDecls RBRACE

    $default  reduce using rule 70 (FieldDecls)

    FieldDecls  go to state 65


State 50

   26 _VarType: UNION IDENTIFIER LBRACE • FieldDecls RBRACE

    $default  reduce using rule 70 (FieldDecls)

    FieldDecls  go to state 66


State 51

   28 _VarType: ENUM IDENTIFIER LBRACE • EnumList RBRACE

    IDENTIFIER  shift, and go to state 67

    $default  reduce using rule 78 (EnumList)

    EnumList  go to state 68
    Enum      go to state 69


State 52

   10 TypedefDecl: TYPEDEF STRUCT IDENTIFIER • LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON
   24 _VarType: STRUCT IDENTIFIER • LBRACE FieldDecls RBRACE
   25         | STRUCT IDENTIFIER •

    LBRACE  shift, and go to state 70

    $default  reduce using rule 25 (_VarType)


State 53

   11 TypedefDecl: TYPEDEF UNION IDENTIFIER • LBRACE FieldDecls RBRACE IDENTIFIER SEMICOLON
   26 _VarType: UNION IDENTIFIER • LBRACE FieldDecls RBRACE
   27         | UNION IDENTIFIER •

    LBRACE  shift, and go to state 71

    $default  reduce using rule 27 (_VarType)


State 54

    9 TypedefDecl: TYPEDEF VarType LPARENTHESES • ASTERISK IDENTIFIER RPARENTHESES LPARENTHESES ParamList RPARENTHESES SEMICOLON

    ASTERISK  shift, and go to state 72


State 55

    8 TypedefDecl: TYPEDEF VarType IDENTIFIER • SEMICOLON

    SEMICOLON  shift, and go to state 73


State 56

   19 VarDecl: VarType LPARENTHESES ASTERISK • IDENTIFIER RPARENTHESES LPARENTHESES ParamList RPARENTHESES SEMICOLON

    IDENTIFIER  shift, and go to state 74


State 57

   14 FuncDecl: VarType IDENTIFIER LPARENTHESES • ParamList RPARENTHESES SEMICOLON
   15         | VarType IDENTIFIER LPARENTHESES • ParamList RPARENTHESES FuncBody

    ELLIPSES    shift, and go to state 75
    CHAR        shift, and go to state 4
    SHORT       shift, and go to state 5
    INT         shift, and go to state 6
    LONG        shift, and go to state 7
    UNSIGNED    shift, and go to state 8
    CONST       shift, and go to state 9
    VOID        shift, and go to state 11
    FLOAT       shift, and go to state 12
    DOUBLE      shift, and go to state 13
    BOOL        shift, and go to state 14
    STRUCT      shift, and go to state 15
    UNION       shift, and go to state 16
    ENUM        shift, and go to state 17
    IDENTIFIER  shift, and go to state 19

    $default  reduce using rule 52 (ParamList)

    VarType      go to state 76
    _VarType     go to state 34
    ParamList    go to state 77
    Param        go to state 78
    BuiltinType  go to state 27


State 58

   46 ArrayBound: LBRACKET • INTEGER RBRACKET
   47           | LBRACKET • RBRACKET

    RBRACKET  shift, and go to state 79
    INTEGER   shift, and go to state 80


State 59

   35 VarInit: IDENTIFIER ArrayBoundList •
   36        | IDENTIFIER ArrayBoundList • ASSIGN Expr
   37        | IDENTIFIER ArrayBoundList • ASSIGN LBRACE InitList RBRACE
   38        | IDENTIFIER ArrayBoundList • ASSIGN LBRACE RBRACE
   43 ArrayBoundList: ArrayBoundList • ArrayBound

    LBRACKET  shift, and go to state 58
    ASSIGN    shift, and go to state 81

    $default  reduce using rule 35 (VarInit)

    ArrayBound  go to state 82


State 60

   44 ArrayBoundList: ArrayBound •
